opam-version: "2.0"
name:         "multicorecheck"
synopsis:     "Experimental multicore testing library"
maintainer:   ["Jan Midtgaard <mail@janmidtgaard.dk>"]
authors:      ["Jan Midtgaard <mail@janmidtgaard.dk>"]
license:      "BSD-2-clause"
homepage:     "https://github.com/jmid/multicoretests"
bug-reports:  "https://github.com/jmid/multicoretests/issues"
dev-repo:     "git+https://github.com/jmid/multicoretests.git"
depends: [
  "base-domains"
  "dune"                {>= "2.9.3"}
  "ocamlfind"           {>= "1.9.3"}
  "domainslib"          {>= "0.4.0"}
  "qcheck-core"         {>= "0.18.1"}
  "qcheck"              {>= "0.18.1"}
  "odoc"                {with-doc}
]
pin-depends: [
  ["domainslib.0.4.0"          "git+https://github.com/ocaml-multicore/domainslib.git#master"]

  ["qcheck-core.0.18.1"        "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck-ounit.0.18.1"       "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck.0.18.1"             "git+https://github.com/c-cube/qcheck.git#master"]
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
