opam-version: "2.0"
synopsis:     "Experimental multicore tests"
maintainer:   ["Jan Midtgaard <mail@janmidtgaard.dk>"]
authors:      ["Jan Midtgaard <mail@janmidtgaard.dk>"]
license:      "BSD-2-clause"
homepage:     "https://github.com/jmid/multicoretests"
bug-reports:  "https://github.com/jmid/multicoretests/issues"
dev-repo:     "git+https://github.com/jmid/multicoretests.git"
depends: [
  "dune"                {>= "2.9.3"}
  "ocamlfind"           {dev}
  "domainslib"          {>= "0.4.0"}
  "ppx_deriving"        {>= "5.2.1"}
  "qcheck-core"         {>= "0.18.0"}
  "qcheck"              {>= "0.18.0"}
  "ppx_deriving_qcheck" {>= "0.2.0"}
  "lockfree"            {>= "0.13"}
  "odoc"                {with-doc}
]
pin-depends: [
  ["dune.2.9.3"                "git+https://github.com/patricoferris/dune#5.00"]
  ["ocamlfind.dev"             "git+https://github.com/kit-ty-kate/ocamlfind#500"]
  ["domainslib.0.4.0"          "git+https://github.com/ocaml-multicore/domainslib.git#master"]
  ["sexplib0.v0.14.0"          "git+https://github.com/patricoferris/sexplib0#5.00"]
  ["ppxlib.0.25.0~5.00preview" "git+https://github.com/pitag-ha/ppxlib#add-temporary-5.0-support"]

  ["qcheck-core.0.18.0"        "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck-ounit.0.18.0"       "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck.0.18.0"             "git+https://github.com/c-cube/qcheck.git#master"]
  ["ppx_deriving_qcheck.0.2.0" "git+https://github.com/c-cube/qcheck.git#master"]

  ["ocamlbuild.0.14.0"         "git+https://github.com/kit-ty-kate/ocamlbuild#500"]
  ["kcas.0.14"                 "git+https://github.com/jmid/kcas#domain-sans-sync"]
  ["lockfree.0.13"             "git+https://github.com/jmid/lockfree#domain-sans-sync"]
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
