opam-version: "2.0"
synopsis:     "Experimental multicore tests"
maintainer:   ["Jan Midtgaard <mail@janmidtgaard.dk>"]
authors:      ["Jan Midtgaard <mail@janmidtgaard.dk>"]
license:      "BSD-2-clause"
homepage:     "https://github.com/jmid/multicoretests"
bug-reports:  "https://github.com/jmid/multicoretests/issues"
dev-repo:     "git+https://github.com/jmid/multicoretests.git"
depends: [
  "base-domains"
  "dune"                {>= "2.9.3"}
  "domainslib"          {>= "0.4.2"}
  "ppx_deriving"        {>= "5.2.1"}
  "ounit2"              {>= "2.2.6"}
  "qcheck-core"         {>= "0.18.1"}
  "qcheck"              {>= "0.18.1"}
  "ppx_deriving_qcheck" {>= "0.2.0"}
  "kcas"                {>= "0.14"}
  "lockfree"            {>= "0.13"}
  "odoc"                {with-doc}
  "multicorecheck"      {= version}
]
pin-depends: [
  ["sexplib0.v0.14.0"          "git+https://github.com/patricoferris/sexplib0#5.00"]
  ["ppxlib.0.25.0~5.00preview" "git+https://github.com/kit-ty-kate/ppxlib#500+sexp"]

  ["qcheck-core.0.18.1"        "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck-ounit.0.18.1"       "git+https://github.com/c-cube/qcheck.git#master"]
  ["qcheck.0.18.1"             "git+https://github.com/c-cube/qcheck.git#master"]
  ["ppx_deriving_qcheck.0.2.0" "git+https://github.com/c-cube/qcheck.git#master"]

  ["domainslib.0.4.2"          "git+https://github.com/ocaml-multicore/domainslib#master"]
  ["kcas.0.14"                 "git+https://github.com/ocaml-multicore/kcas#master"]
  ["lockfree.v0.2.0"           "git+https://github.com/ocaml-multicore/lockfree#main"]
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
