opam-version: "2.0"
name:         "qcheck-lin"
synopsis:     "Linearizability testing library for multicore OCaml"
maintainer:   ["Jan Midtgaard <mail@janmidtgaard.dk>"]
authors:      ["Jan Midtgaard <mail@janmidtgaard.dk>" "Olivier Nicole" "Nicolas Osborne"]
license:      "BSD-2-clause"
homepage:     "https://github.com/jmid/multicoretests"
bug-reports:  "https://github.com/jmid/multicoretests/issues"
dev-repo:     "git+https://github.com/jmid/multicoretests.git"
depends: [
  "base-domains"
  "dune"                {>= "2.9.3"}
  "qcheck-core"         {>= "0.19"}
  "qcheck-multicoretests-util" {= version}
  "odoc"                {with-doc}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
