(library
 (name STM)
 (public_name qcheck-stm.stm)
 (modules STM)
 (libraries qcheck-core qcheck-multicoretests-util))

(library
 (name STM_sequential)
 (public_name qcheck-stm.sequential)
 (modules STM_sequential)
 (libraries qcheck-core qcheck-stm.stm))

(rule
 (action
  (copy STM_domain_common.ml STM_domain_common_eio.ml)))

(library
 (name STM_domain)
 (public_name qcheck-stm.domain)
 (modules STM_domain STM_domain_common)
 (enabled_if
  (>= %{ocaml_version} 5))
 (libraries qcheck-core qcheck-stm.stm))

(library
 (name STM_domain_eio)
 (public_name qcheck-stm-eio.domain)
 (modules STM_domain_eio STM_domain_common_eio)
 (enabled_if
  (>= %{ocaml_version} 5))
 (libraries qcheck-core qcheck-stm.stm eio))

(library
 (name STM_thread)
 (public_name qcheck-stm.thread)
 (modules STM_thread)
 (libraries threads qcheck-core qcheck-stm.stm))

(library
 (name lin)
 (public_name qcheck-lin.lin)
 (modules lin)
 (libraries qcheck-core qcheck-core.runner qcheck-multicoretests-util))

(rule
 (action
  (copy lin_domain_common.ml lin_domain_common_eio.ml)))

(library
 (name lin_domain)
 (public_name qcheck-lin.domain)
 (modules lin_domain lin_domain_common)
 (enabled_if
  (>= %{ocaml_version} 5))
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-multicoretests-util
  qcheck-lin.lin))

(library
 (name lin_domain_eio)
 (public_name qcheck-lin-eio.domain)
 (modules lin_domain_eio lin_domain_common_eio)
 (enabled_if
  (>= %{ocaml_version} 5))
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-multicoretests-util
  qcheck-lin.lin
  eio))

(library
 (name lin_effect)
 (public_name qcheck-lin.effect)
 (modules lin_effect)
 (enabled_if
  (>= %{ocaml_version} 5))
 (libraries
  qcheck-core
  qcheck-core.runner
  qcheck-multicoretests-util
  qcheck-lin.lin))

(library
 (name lin_thread)
 (public_name qcheck-lin.thread)
 (modules lin_thread)
 (libraries
  threads
  qcheck-core
  qcheck-core.runner
  qcheck-multicoretests-util
  qcheck-lin.lin))

(library
 (name util)
 (public_name qcheck-multicoretests-util)
 (modules util)
 (libraries qcheck-core.runner unix))
