;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps check_error_count.exe
       (alias neg_tests/default)
       ;; stdlib, in alphabetic order
       (alias atomic/default)
       ;; (alias buffer/default)  -- disable buffer test causing segfault
       (alias domain/default)
       (alias hashtbl/default)
       (alias lazy/default)
       (alias queue/default)
       (alias stack/default)
       (alias thread/default)
       ;; other libs
       (alias domainslib/default)
       (alias lockfree/default)
       ;; (alias kcas/default)  -- kcas tests disabled
       ))

;; platform independent helper to help validate non-deterministic output

(executable
 (name check_error_count)
 (modules check_error_count))
