;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps (alias neg_tests/default)
       ;; stdlib, in alphabetic order
       (alias atomic/default)
       (alias buffer/default)
       (alias domain/default)
       (alias ephemeron/default)
       (alias hashtbl/default)
       (alias lazy/default)
       (alias queue/default)
       (alias stack/default)
       (alias thread/default)
       ;; other libs
       (alias domainslib/default)
       (alias lockfree/default)
       ;; (alias kcas/default)  -- kcas tests disabled
       ))
