;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps ;; internal framework testing
       (alias internal/default)
       (alias neg_tests/default)
       ;; stdlib, in alphabetic order
       (alias array/default)
       (alias atomic/default)
       (alias bigarray/default)
       (alias buffer/default)
       (alias bytes/default)
       (alias domain/default)
       (alias ephemeron/default)
       (alias floatarray/default)
       (alias hashtbl/default)
       (alias lazy/default)
       (alias queue/default)
       (alias semaphore/default)
       (alias stack/default)
       (alias thread/default)
       (alias threadomain/default)
       ;; other libs
       (alias domainslib/default)
       (alias lockfree/default)
       ;; (alias kcas/default)  -- kcas tests disabled
       ))
