(documentation
  (package qcheck-stm)
  (mld_files index))

(executable
  (name mutable_list_v0)
  (modules mutable_list_v0)
  (libraries qcheck qcheck-stm.sequential)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_list_v0.exe)))

(executable
  (name mutable_list_v1)
  (modules mutable_list_v1)
  (libraries qcheck qcheck-stm.sequential)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_list_v1.exe)))

(executable
  (name mutable_list_v2)
  (modules mutable_list_v2)
  (libraries qcheck qcheck-stm.domain)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_list_v2.exe)))

(executable
  (name mutable_list_v3)
  (modules mutable_list_v3)
  (libraries qcheck qcheck-stm.domain)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_list_v3.exe)))
