(documentation
  (package qcheck-stm)
  (mld_files index))

(executable
  (name mutable_set_v0)
  (modules mutable_set_v0)
  (libraries qcheck qcheck-stm.sequential)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_set_v0.exe)))

(executable
  (name mutable_set_v1)
  (modules mutable_set_v1)
  (libraries qcheck qcheck-stm.sequential)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_set_v1.exe)))

(executable
  (name mutable_set_v2)
  (modules mutable_set_v2)
  (libraries qcheck qcheck-stm.domain)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_set_v2.exe)))

(executable
  (name mutable_set_v3)
  (modules mutable_set_v3)
  (libraries qcheck qcheck-stm.domain)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_set_v3.exe)))

(executable
  (name mutable_set_v4)
  (modules mutable_set_v4)
  (libraries qcheck qcheck-stm.domain)
  (preprocess (pps ppx_deriving.show)))

(rule
  (alias runtest)
  (action (run ./mutable_set_v4.exe)))
