;; Internal tests

(test
 (name util_print_test)
 (modules util_print_test)
 (package qcheck-multicoretests-util)
 (libraries qcheck-multicoretests-util))


(executable
 (name cleanup_lin)
 (modules cleanup_lin)
 (libraries qcheck-lin.domain)
 (enabled_if (>= %{ocaml_version} 5)))

(rule
 (alias runtest)
 (package qcheck-lin)
 (action (run %{exe:cleanup_lin.exe} --verbose))
 (enabled_if (>= %{ocaml_version} 5)))

(executable
 (name cleanup_stm)
 (modules cleanup_stm)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (enabled_if (>= %{ocaml_version} 5)))

(rule
 (alias runtest)
 (package qcheck-stm)
 (action (run %{exe:cleanup_stm.exe} --verbose))
 (enabled_if (>= %{ocaml_version} 5)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy mutable_set_v5.expected.64 mutable_set_v5.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy mutable_set_v5.expected.32 mutable_set_v5.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy mutable_set_v4.expected.64 mutable_set_v5.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy mutable_set_v4.expected.32 mutable_set_v5.expected)))

(test
 (name mutable_set_v5)
 (modules mutable_set_v5)
 (package qcheck-stm)
 (libraries qcheck-stm.sequential threads.posix)
 (action
  (with-accepted-exit-codes 1 (run ./%{test} --verbose --seed 229109553))))

(test
 (name uncaught_lin)
 (package qcheck-lin)
 (modules uncaught_lin)
 (libraries qcheck-lin.domain)
 (enabled_if (>= %{ocaml_version} 5))
 (action
  (pipe-outputs
   (with-accepted-exit-codes 1
    (run %{test} --no-colors --verbose --seed 260395858))
   ; filter out output that is not deterministic enough across
   ; versions and platforms
   (run sed -e "/^[[]/d" -e "s/ ([0-9]* shrink steps)//"))))
