;; Test of the array library

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (action (run %{test} --verbose))
)

(test
 (name lin_internal_tests)
 (modules lin_internal_tests)
 (package multicoretests)
 (flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 ; (action (run %{test} --verbose))
 (action (progn))
)

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run %{test} --verbose))
)
