;; Tests of the stdlib Atomic library

;; STM_sequential and STM_domain test of Atomic

(test
 (name stm_tests)
 (modules stm_tests)
 (package multicoretests)
 (libraries qcheck-stm.sequential qcheck-stm.domain)
 (preprocess (pps ppx_deriving.show))
 (action (run runner %{dep:stm_tests.exe}))
)

;; Linearization tests of Atomic, utilizing ppx_deriving_qcheck

(test
 (name lin_tests)
 (modules lin_tests)
 (package multicoretests)
 (flags (:standard -w -27))
 (libraries qcheck-lin.domain)
 (preprocess (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq))
 ; (action (run runner %{dep:lin_tests.exe}))
 (action (echo "Skipping src/atomic/%{test} from the test suite\n\n"))
)

(test
 (name lin_tests_dsl)
 (modules lin_tests_dsl)
 (package multicoretests)
 (libraries qcheck-lin.domain)
 (action (run runner %{dep:lin_tests_dsl.exe}))
)
